--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400&display=swap"
       rel="stylesheet"
     />
 
@@ -66,7 +66,7 @@
         </div>
       </section>
 
-      <!-- History ( About us ) -->
+      <!-- common ( About us ) -->
 
       <section class="common">
         <div class="common__text">
@@ -135,6 +135,24 @@
         </div>
       </section>
 
+      <!-- Our collections -->
+
+      <section class="our-collections">
+        <h2>Our collections</h2>
+        <div class="our-collections__card">
+          <img src="images/our-collections-1.png" alt="" />
+          <p class="our-collections__card_description">Fashion</p>
+        </div>
+        <div class="our-collections__card">
+          <img src="images/our-collections-2.png" alt="" />
+          <p class="our-collections__card_description">Ariamo Light</p>
+        </div>
+        <div class="our-collections__card">
+          <img src="images/our-collection-3.png" alt="" />
+          <p class="our-collections__card_description">Ariamo Evening</p>
+        </div>
+      </section>
+
       <!-- Footer -->
 
       <section class="footer">
@@ -199,10 +217,14 @@
             <input type="submit" value="SUBSCRIBE" />
           </form>
         </div>
-        <div class="footer__icons">
-            <i></i><i></i><i></i><i></i>
+        <div class="footer__icons"><i></i><i></i><i></i><i></i></div>
+        <div class="footer__developed">
+          <p>2021@ All rights</p>
+          <div>
+            <p>Developed by</p>
+            <i></i>
+          </div>
         </div>
-        <div class="footer__developed"></div>
       </section>
     </div>
   </body>
