--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
           <div class="header__lower-section_logo">
             <i class="header__lower-section_logo-item"></i>
           </div>
+          <div class="header__lower-section_navigation">
+            <ul>
+              <li>wedding</li>
+              <li>evening</li>
+              <li>sales points</li>
+              <li>about</li>
+              <li>contacts</li>
+            </ul>
+          </div>
           <div class="header__lower-section_context-menu">
             <i></i><i></i><i></i><i></i>
           </div>
@@ -90,7 +99,17 @@
         </div>
       </section>
 
-      <!-- About Product -->
+      <!-- Сollage -->
+
+      <section class="collage">
+        <img src="images/collage-1.png" alt="" />
+        <img src="images/collage-2.png" alt="" />
+        <img src="images/collage-3.png" alt="" />
+        <img src="images/collage-4.png" alt="" />
+        <img src="images/collage-5.png" alt="" />
+      </section>
+
+      <!-- About Product-mobile -->
       <section class="product">
         <div class="product__photo"></div>
         <div class="product__text">
@@ -118,6 +137,35 @@
         </div>
       </section>
 
+      <!-- About Product-desktop -->
+
+      <section class="product-desktop">
+        <div class="product-desktop__up"></div>
+        <div class="product-desktop__down"></div>
+        <div class="product-desktop__text">
+          <h2>About ARIAMO</h2>
+          <p>
+            What do You think about Bride’s special day? Do You imagine it? And
+            we at ARIAMO imagine Her every day. Because this is our job: to
+            predict every bridal move, look in the mirror, touch the fabric. We
+            tailor every wedding dress to make Her feel free, happy and
+            indescribably beautiful at The main day.
+          </p>
+          <p>
+            Liberty and freedom of the bride with choosing exactly how wedding
+            day will go is our main value. Therefore, we create a design that
+            will fit into any wedding concept. Who is the bride at the wedding -
+            an elven princess, a bohemian virgin or an Italian aristocrat? From
+            You we need just the decision, and from us You get an amazing dress
+            in the style of rustic or bohemian with: @ariamobridal, classic
+            with: @madionibridal or couture with: @tesorobridal. A dress in
+            which Bride will first of all feel HERSELF.
+          </p>
+        </div>
+        <div class="product-desktop__photo"></div>
+        <div class="product-desktop__button">SEE COLLECTIONS</div>
+      </section>
+
       <!-- Focus-of-company -->
 
       <section class="focus">
@@ -140,17 +188,63 @@
       <section class="our-collections">
         <h2>Our collections</h2>
         <div class="our-collections__card">
-          <img src="images/our-collections-1.png" alt="" />
+          <div
+            class="our-collections__card_item"
+            style="background-image: url(images/our-collections-1.png)"
+          ></div>
           <p class="our-collections__card_description">Fashion</p>
         </div>
         <div class="our-collections__card">
-          <img src="images/our-collections-2.png" alt="" />
+          <div
+            class="our-collections__card_item"
+            style="background-image: url(images/our-collections-2.png)"
+          ></div>
           <p class="our-collections__card_description">Ariamo Light</p>
         </div>
         <div class="our-collections__card">
-          <img src="images/our-collection-3.png" alt="" />
+          <div
+            class="our-collections__card_item"
+            style="background-image: url(images/our-collection-3.png)"
+          ></div>
           <p class="our-collections__card_description">Ariamo Evening</p>
         </div>
+      </section>
+
+      <!-- Our collections-desctop-->
+
+      <section class="our-collection-desktop">
+        <div class="our-collection-desktop__dark-block"></div>
+        <div
+          class="our-collection-desktop__photo"
+          style="
+            right: 130px;
+            top: 260px;
+            background-image: url(images/our-collections-1.png);
+            width: 380px;
+            height: 510px;
+          "
+        ></div>
+        <div
+          class="our-collection-desktop__photo"
+          style="
+            background-image: url(images/our-collection-3.png);
+            bottom: 0;
+            left: 476px;
+            width: 454px;
+            height: 580px;
+          "
+        ></div>
+        <div
+          class="our-collection-desktop__photo"
+          style="
+            background-image: url(images/our-collections-2.png);
+            top: 0;
+            left: 70px;
+            width: 416px;
+            height: 720px;
+          "
+        ></div>
+        <p class="our-collection-desktop__title">Our collections</p>
       </section>
 
       <!-- Footer -->
