--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <p class="our-collection-desktop__title">Our collections</p>
       </section>
 
-      <!-- Footer -->
+      <!-- Footer mobile -->
 
       <section class="footer">
         <div class="footer__logo">
@@ -297,11 +297,7 @@
               collections, promo and events
             </p>
           </div>
-          <form
-            class="footer__subscribe_button"
-            action="/index.php"
-            method="POST"
-          >
+          <form class="footer__subscribe_button">
             <input
               type="email"
               name="email"
@@ -314,6 +310,79 @@
         <div class="footer__icons"><i></i><i></i><i></i><i></i></div>
         <div class="footer__developed">
           <p>2021@ All rights</p>
+          <div>
+            <p>Developed by</p>
+            <i></i>
+          </div>
+        </div>
+      </section>
+
+      <!-- footer desktop -->
+      <section class="footer-desktop">
+        <div class="footer-desktop__upper">
+          <div class="footer-desktop__upper_logo">
+            <span class="footer-desktop__upper_logo-item"></span>
+          </div>
+          <div class="footer-desktop__upper_product">
+            <ul>
+              <li>Product</li>
+              <li>Wedding Dresses</li>
+              <li>Ariamo</li>
+              <li>Ariamo Light</li>
+              <li>Evening Dresses</li>
+              <li>Last Collection</li>
+            </ul>
+          </div>
+          <div class="footer-desktop__upper_company">
+            <ul>
+              <li>Company</li>
+              <li>About Us</li>
+              <li>Partnership</li>
+              <li>Contacts</li>
+              <li>Sales Points</li>
+              <li>Blog</li>
+            </ul>
+          </div>
+          <div class="footer-desktop__upper_support">
+            <ul>
+              <li>Support</li>
+              <li>Help Center</li>
+              <li>Privacy policy</li>
+              <li>Terms of use</li>
+              <li>Cookies policy</li>
+              <li>Sitemap</li>
+            </ul>
+          </div>
+          <div class="footer-desktop__upper_subscribe">
+            <div
+              class="footer-desktop__upper_subscribe-text footer__subscribe_text"
+            >
+              <p>Subscribe to our newsleetter</p>
+              <p>
+                Subscribe to be the first to receive information about
+                collections, promo and events
+              </p>
+            </div>
+            <form
+              class="footer__subscribe_button footer-desktop__upper_subscribe-button"
+            >
+              <input
+                type="email"
+                name="email"
+                value=""
+                placeholder="Email address"
+              /><br />
+              <input type="submit" value="SUBSCRIBE" />
+            </form>
+            <div class="footer__icons footer-desktop__upper_subscribe-icons">
+              <i></i><i></i><i></i><i></i>
+            </div>
+          </div>
+        </div>
+        <div class="footer-desktop__lower">
+          <hr size="0.3px" />
+          <p>2021@ All rights</p>
+          <hr size="0.3px" />
           <div>
             <p>Developed by</p>
             <i></i>
